Backport java 17 build support to 7.17 (#1950)
This commit adds support for building on java 17, while leaving support for building java 11 untouched.